...
    onAlbumCardClicked: (String) -> Unit,
    padding: PaddingValues
) {
    Surface(
        modifier = Modifier
            .padding(padding)
            .testTag("TopAlbumsSurface"),
        color = MaterialTheme.colorScheme.background,
    ) {
        when (result) {
            ViewState.Error -> DefaultErrorScreen(errorMessage = "Failed to load albums")
            ViewState.Loading -> LoadingItem()
            is ViewState.Success -> TopAlbumCardCollection(
                topAlbums = result.entries,
                isList = isList,
                onAlbumCardClicked
            )
...
